--- a/Client/package.json
+++ b/Client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@heroicons/react": "^2.1.3",
     "@tanstack/react-table": "^8.13.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
