--- a/Client/package.json
+++ b/Client/package.json
@@ -12,16 +12,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mysql2": "^3.9.2",
-    "oracledb": "^6.3.0"
+    "oracledb": "^6.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.2",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,7 +48,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "tailwindcss": "^3.4.3"
   }
 }
