--- a/home/package.json
+++ b/home/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
