--- a/home/package.json
+++ b/home/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-scripts": "5.0.1",
+    "tailwindcss-animated": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,7 +39,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.10",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss": "^3.4.10"
   }
 }
